=== HEAD

* Respect :collate column option on MySQL (jeremyevans) (#445)

* Use Mysql2::Client::FOUND_ROWS to get accurate number of rows matched in the mysql2 adapter (jeremyevans)

* Use Mysql#info to get accurate number of rows matched in the mysql adapter (jeremyevans)

* Make mock adapter with specific SQL dialect use appropriate defaults for quoting identifiers (jeremyevans)

* Make list plugin automatically set position field value on creation if not already set (jeremyevans)

* Add Database#integer_booleans setting on SQLite to store booleans as integers (jeremyevans)

* Typecast columns stored as integers/floats in the SQLite adapter (jeremyevans)

* In the instance_hooks plugin, (before|after)_*_hook instance methods now return self (jeremyevans)

* Handle NaN, Infinity, and -Infinity floats on PostgreSQL (kf8a, jeremyevans) (#444)

* Support an :sslmode option when using the postgres adapter with the pg driver (jeremyevans)

* Add Database#create_schema and #drop_schema to the shared postgres adapter (tkellen, jeremyevans) (#440)

* Add Database#supports_savepoints_in_prepared_transactions?, false on MySQL >=5.5.12 (jeremyevans) (#437)

* Support an identifier output method in the mysql2 adapter (jeremyevans)

* Make foreign key creation work on MySQL with InnoDB engine without specifying :key option (jeremyevans)

* Allow disabling use of sudo with SUDO='' when running the rake install/uninstall tasks (jeremyevans) (#433)

=== 3.32.0 (2012-02-01)

* Make serialization_modification_detection plugin work correctly with new objects and after saving existing objects (jeremyevans) (#432)

* Make refreshes after model creation clear the deserialized values in the serialization plugin (jeremyevans)

* Add Dataset#update_ignore on MySQL, for using UPDATE IGNORE in queries (danielb2) (#429)

* Allow select_map/select_order_map to take both a column argument and a block (jeremyevans)
